syntax = "proto2";
package oneflow;

import "oneflow/core/kernel/kernel.proto";

message ExecNodeProto {
  required string op_name = 2;
  map<string, int64> bn_in_op2regst_desc_id = 3;
}

message ExecSequence {
  repeated ExecNodeProto exec_node = 1;
}

message TodoExecNodeProto {
  required KernelConf kernel_conf = 1;
  map<string, int64> bn_in_op2regst_desc_id = 2;
}

message TodoExecSequence {
  repeated TodoExecNodeProto exec_node = 1;
}
