syntax = "proto3";
package oneflow;

message ConvolutionOpConf {
  string in = 1;
  string out = 2;
}

message InnerProductOpConf {
  string in = 1;
  string out = 2;
}

message LoaderOpConf {
  string data = 1;
  string label = 2;
}

message PoolingOpConf {
  string in = 1;
  string out = 2;
}

message ReluOpConf {
  string in = 1;
  string out = 2;
}

message SoftmaxOpConf {
  string in = 1;
  string out = 2;
}

message MultinomialLogisticLossOpConf {
  string data = 1;
  string label = 2;
  string loss = 3;
}

message CopyOpConf {
  enum CopyType {
    H2D = 0;
    D2H = 1;
    D2D = 2;
    H2H = 3;
  }
  CopyType copy_type = 1;
  repeated string lbns = 2;
}

message CloneOpConf {
  string lbn = 1;
  int32 clone_num = 2;
}

message ConcatBoxConf {
  int32 axis = 1;
  repeated int32 proportion = 2;
}

message SplitBoxConf {
  int32 axis = 1;
  repeated int32 proportion = 2;
}

message AddBoxConf {
  int32 in_num = 1;
}

message CloneBoxConf {
  int32 out_num = 1;
}

message BoxingOpConf {
  string lbn = 1;
  oneof in_box_conf {
    ConcatBoxConf concat_in_box_conf = 2;
    AddBoxConf add_in_box_conf = 3;
  }
  oneof out_box_conf {
    SplitBoxConf split_out_box_conf = 4;
    CloneBoxConf clone_out_box_conf = 5;
  }
}

message OperatorConf {
  string name = 1;
  oneof specified_type {
    ConvolutionOpConf convolution_op_conf = 100;
    InnerProductOpConf inner_product_op_conf = 101;
    LoaderOpConf loader_op_conf = 102;
    PoolingOpConf pooling_op_conf = 103;
    ReluOpConf relu_op_conf = 104;
    SoftmaxOpConf softmax_op_conf = 105;
    MultinomialLogisticLossOpConf multinomial_logistic_loss_op_conf = 106;
    CopyOpConf copy_op_conf = 107;
    CloneOpConf clone_op_conf = 108;
    BoxingOpConf boxing_op_conf = 109;
  }
}
